test/compile_errors/err_c_import_raw_call_requires_unsafe.w
//! expect-error: raw c_import function call requires unsafe context

use c_import("stdlib.h")

fn main:
    free(null)
